readme
Updated README to reflect new version and features.